--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -1,7 +1,6 @@
 ---
 - name: Build and run PocketBase Docker container
   hosts: all
-  connection: local
   become: yes
   become_user: root
   tasks:
@@ -31,7 +30,7 @@
           
           RUN apk add --no-cache unzip ca-certificates
           
-          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_armd64.zip /tmp/pb.zip
 
           RUN unzip /tmp/pb.zip -d /pb/
           
