--- a/edit_hook.yml
+++ b/edit_hook.yml
@@ -1,7 +1,8 @@
 ---
-- name: Create or update main.pb.js in the volume directory
+- name: Update main.pb.js in the volume directory
   hosts: all
-  connection: local
+  become: yes
+  become_user: root
   tasks:
     - name: Saving the hook code
       ansible.builtin.copy:
