--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -25,18 +25,17 @@
         dest: "/tmp/pocketbase/Dockerfile"
         content: |
           FROM alpine:latest
-          
           ARG PB_VERSION=0.22.19
           
-          RUN apk add --no-cache unzip ca-certificates
-          
-          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_armd64.zip /tmp/pb.zip
-
+          RUN apk add --no-cache \
+              unzip \
+              ca-certificates
+          # download and unzip PocketBase
+          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_arm64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
-          
           # start PocketBase
           CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
-
+          
     - name: Build PocketBase Docker image
       docker_image:
         name: "pocketbase-003-{{ pb_version }}"
