--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install Caddy Server
   hosts: all
+  connection: local
   tasks:
     - name: Ensure caddy_network exists
       docker_network:
