--- a/install_sablier.yml
+++ b/install_sablier.yml
@@ -1,6 +1,7 @@
 ---
 - name: Deploy Docker services
   hosts: all
+  connection: local
   tasks:
     - name: Ensure caddy_network exists
       docker_network:
