--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -1,6 +1,7 @@
 ---
 - name: Build and run PocketBase Docker container
   hosts: all
+  connection: local
   become: yes
   become_user: root
   tasks:
@@ -31,7 +32,7 @@
               unzip \
               ca-certificates
           # download and unzip PocketBase
-          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_arm64.zip /tmp/pb.zip
+          ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
           RUN unzip /tmp/pb.zip -d /pb/
           # start PocketBase
           CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
