--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -64,6 +64,7 @@
           - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
         labels:
           "sablier.enable": "true"
+          "sablier.group": "{{ instance_code }}"
 
     - name: Run Pocketbase Migrations
       community.docker.docker_container_exec:
