--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -26,7 +26,7 @@
           http://*.deploypocket.com {
             route /* {
               sablier {
-                names {labels.2}
+                group {labels.2}
                 session_duration 1m 
                 blocking
               }
