--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -2,8 +2,6 @@
 - name: Build and run PocketBase Docker container
   hosts: all
   connection: local
-  become: yes
-  become_user: root
   tasks:
     - name: Ensure App Directories Exist
       file:
@@ -11,19 +9,20 @@
         state: directory
         mode: '0755'
       loop:
-        - "/tmp/pocketbase"
-        - "/pocketbase_apps/{{ instance_code }}/pb/migrations"
-        - "/pocketbase_apps/{{ instance_code }}/pb/pb_data"
-        - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks"
+        - "/deploypocket/pocketbase"
+        - "/deploypocket/apps/{{ instance_code }}/pb/migrations"
+        - "/deploypocket/apps/{{ instance_code }}/pb/pb_data"
+        - "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks"
+        - "/deploypocket/apps/{{ instance_code }}/pb/storage"
 
     - name: Create hooks file
       file:
-        path: "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        path: "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks/main.pb.js"
         state: touch
         
     - name: Write Dockerfile for PocketBase
       copy:
-        dest: "/tmp/pocketbase/Dockerfile"
+        dest: "/deploypocket/pocketbase/Dockerfile"
         content: |
           FROM alpine:latest
           ARG PB_VERSION=0.22.19
@@ -42,8 +41,8 @@
         name: "pocketbase-003-{{ pb_version }}"
         source: build
         build:
-          path: /tmp/pocketbase/
-          dockerfile: /tmp/pocketbase/Dockerfile
+          path: /deploypocket/pocketbase/
+          dockerfile: /deploypocket/pocketbase/Dockerfile
           args:
             PB_VERSION: "{{ pb_version }}"
         state: present
@@ -59,12 +58,12 @@
         networks:
           - name: caddy_network
         volumes:
-          - "/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
-          - "/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
-          - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
+          - "/deploypocket/apps/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "/deploypocket/apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
+          - "/deploypocket/apps/{{ instance_code }}/pb/storage:/pb/storage"
         labels:
           "sablier.enable": "true"
-          "sablier.group": "{{ instance_code }}"
 
     - name: Run Pocketbase Migrations
       community.docker.docker_container_exec:
