--- a/installer.yml
+++ b/installer.yml
@@ -3,5 +3,33 @@
   hosts: all
   connection: local
   tasks:
+    - name: Create deploypocket directory
+      become: yes
+      become_user: root
+      file:
+        path: "/deploypocket"
+        state: directory
+        mode: "0777"
+
+    - name: Create directories
+      file:
+        path: "/deploypocket/{{ item }}"
+        state: directory
+        mode: "0777"
+      loop:
+        - "caddy"
+        - "sablier"
+        - "apps"
+        - "pocketbase"
+
+    - name: Ensure caddy_network exists
+      docker_network:
+        name: caddy_network
+        driver: bridge
+        state: present
+
     - name: Install Sablier
-      ansible.builtin.include_tasks: "install_sablier.yml"
+      include_tasks: "install_sablier.yml"
+
+    - name: Install Caddy
+      include_tasks: "install_caddy.yml"
