--- a/edit_hook.yml
+++ b/edit_hook.yml
@@ -7,5 +7,5 @@
   tasks:
     - name: Saving the hook code
       ansible.builtin.copy:
-        dest: "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks/main.pb.js"
+        dest: "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks/main.pb.js"
         content: "{{ content }}"
