--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -2,8 +2,6 @@
 - name: Delete PocketBase Docker container
   hosts: all
   connection: local
-  become: yes
-  become_user: root
   tasks:
     - name: Delete PocketBase Docker container
       docker_container:
@@ -13,5 +11,5 @@
 
     - name: Remove App Directory from Host
       file:
-        path: "/pocketbase_apps/{{ instance_code }}"
+        path: "/deploypocket/apps/{{ instance_code }}"
         state: absent
