--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -10,6 +10,6 @@
         networks:
           - name: caddy_network
         volumes:
-          - "/pocketbase_apps/{{ instance_code }}/pb/migrations:/pb/migrations"
-          - "/pocketbase_apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
-          - "/pocketbase_apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
+          - "/deploypocket/apps/{{ instance_code }}/pb/migrations:/pb/migrations"
+          - "/deploypocket/apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
+          - "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
