--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -1,7 +1,6 @@
 ---
 - name: Start PocketBase Docker container
   hosts: all
-  connection: local
   tasks:
     - name: Start PocketBase Docker container
       docker_container:
@@ -13,3 +12,4 @@
           - "/deploypocket/apps/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "/deploypocket/apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
           - "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
+          - "/deploypocket/apps/{{ instance_code }}/pb/storage:/pb/storage"
