--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -9,7 +9,7 @@
     content: |
       http://*.deploypocket.com {
         sablier {
-          group * 
+          names  
           blocking
         }
         reverse_proxy {labels.2}:8090
