--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -1,23 +1,25 @@
 ---
-- name: Pull Caddy with sablier plugin image
-  command: "docker build https://github.com/acouvreur/sablier.git#v1.4.0-beta.3:plugins/caddy 
-    --build-arg=CADDY_VERSION=2.6.4
-    -t caddy:2.6.4-with-sablier"
-
+- name: Pull Caddy image
+  docker_image:
+    name: caddy:latest
+    tag: latest
+    source: pull
+    state: present
+    
 - name: Create Caddyfile
   ansible.builtin.copy:
     content: |
       http://*.deploypocket.com {
         reverse_proxy {labels.2}:8090
       }
-      
+
     dest: /deploypocket/caddy/Caddyfile
     mode: '0644'
 
 - name: Deploy Caddy Proxy Service
   docker_container:
     name: caddy_server
-    image: caddy:2.6.4-with-sablier
+    image: caddy
     ports:
       - "80:80"
       - "443:443"
