--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -9,6 +9,12 @@
 - name: Create Caddyfile
   ansible.builtin.copy:
     content: |
+      {
+          servers {
+              metrics
+          }
+      }
+      
       http://*.deploypocket.com {
         reverse_proxy {labels.2}:8090
       }
@@ -23,6 +29,7 @@
     ports:
       - "80:80"
       - "443:443"
+      - "2019:2019"
       - "443:443/udp"
     networks:
       - name: caddy_network
