enable admin api in caddy

--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -8,6 +8,7 @@
   ansible.builtin.copy:
     content: |
       {
+        admin 0.0.0.0:2019
         import /deploypocket/apps/*/caddy+sablier.conf
       }
       
