Fix directory error in docker_container_exec

--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -98,4 +98,4 @@
       community.docker.docker_container_exec:
         container: caddy_server
         command: caddy reload
-        workdir: /etc/caddy
+        chdir: /etc/caddy
