--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -13,3 +13,6 @@
       file:
         path: "/deploypocket/apps/{{ instance_code }}"
         state: absent
+
+    - name: Reload caddy configuration
+      include_tasks: "reload_caddy_configuration.yml"
