--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -13,3 +13,6 @@
           - "/deploypocket/apps/{{ instance_code }}/pb/migrations:/pb/migrations"
           - "/deploypocket/apps/{{ instance_code }}/pb/pb_data:/pb/pb_data"
           - "/deploypocket/apps/{{ instance_code }}/pb/pb_hooks:/pb/pb_hooks"
+
+    - name: Reload caddy configuration
+      include_tasks: "reload_caddy_configuration.yml"
