--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -1,7 +1,6 @@
 ---
-- name: Start PocketBase Docker container
+- name: Start pocketBase docker container
   hosts: all
-  connection: local
   tasks:
     - name: Start PocketBase Docker container
       docker_container:
