make connection local in development

--- a/delete_pocketbase.yml
+++ b/delete_pocketbase.yml
@@ -1,6 +1,7 @@
 ---
 - name: Delete pocketBase docker container
   hosts: all
+  connection: local
   tasks:
     - name: Delete pocketBase docker container
       docker_container:
