--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -1,6 +1,7 @@
 ---
 - name: Start pocketBase docker container
   hosts: all
+  connection: local
   tasks:
     - name: Start PocketBase Docker container
       docker_container:
