--- a/start_pocketbase.yml
+++ b/start_pocketbase.yml
@@ -1,5 +1,5 @@
 ---
-- name: Start pocketBase docker container
+- name: Start pocketbase docker container
   hosts: all
   connection: local
   tasks:
