--- a/create_pocketbase.yml
+++ b/create_pocketbase.yml
@@ -1,5 +1,5 @@
 ---
-- name: Build and run PocketBase Docker container
+- name: Build and run pocketBase docker container
   hosts: all
   connection: local
   tasks:
@@ -36,7 +36,7 @@
           # start PocketBase
           CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
           
-    - name: Build PocketBase Docker image
+    - name: Build pocketBase docker image
       docker_image:
         name: "pocketbase-003-{{ pb_version }}"
         source: build
@@ -49,7 +49,7 @@
         force_tag: true
 
 
-    - name: Run PocketBase Docker container
+    - name: Run pocketBase docker container
       docker_container:
         name: "{{ instance_code }}"
         image: "pocketbase-003-{{ pb_version }}:latest"
@@ -67,7 +67,7 @@
         labels:
           "sablier.enable": "true"        
 
-    - name: Run Pocketbase Migrations
+    - name: Run pocketbase migrations
       community.docker.docker_container_exec:
         container: "{{ instance_code }}"
         argv:
@@ -75,7 +75,7 @@
           - "migrate"
           - "up"
 
-    - name: Create Admin Account
+    - name: Create admin account
       community.docker.docker_container_exec:
         container: "{{ instance_code }}"
         argv:
