--- a/install_caddy.yml
+++ b/install_caddy.yml
@@ -5,7 +5,7 @@
     version: "v1.4.0-beta.3"
     dest: "/tmp/sablier"
 
-- name: Build Docker image
+- name: Build docker image
   community.docker.docker_image:
     source: build
     build:
