--- a/installer.yml
+++ b/installer.yml
@@ -1,7 +1,6 @@
 ---
-- name: Install Dependencies
+- name: Install dependencies
   hosts: all
-  connection: local
   tasks:
     - name: Create deploypocket directory
       become: yes
@@ -22,7 +21,7 @@
         - "apps"
         - "pocketbase"
 
-    - name: Ensure caddy_network exists
+    - name: Create caddy_network
       docker_network:
         name: caddy_network
         driver: bridge
